# cc

./: CMakeLists.txt  CMakePresets.json  configure
.github/workflows/: build.yml  linux.yml  macos.yml  multi-platform.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt  bench_function.cpp  bench_functor.cpp  bench_json.cpp  bench_main.cpp  bench_regex.cpp  bench_sqlite3.cpp  bench_stopwatch.cpp  bench_value.cpp  common.h
cmake/: FetchAbsl.cmake  FetchBoost.cmake  FetchFmt.cmake  FetchGSL.cmake  FetchGTest.cmake  FetchMimalloc.cmake  FetchNanobench.cmake  FetchRE2.cmake  FetchSpdlog.cmake  FetchSqlite3.cmake  FetchYyjson.cmake  ProjectGuard.cmake  common.cmake  cpp-yyjson.patch  external.cmake  process_msg.cmake
examples/: CMakeLists.txt  ex_asio_channel.cpp  ex_asio_condvar.cpp  ex_asio_coro.cpp  ex_asio_semaphore.cpp  ex_functor.cpp  ex_httpclient.cpp  ex_httpserver.cpp  ex_process.cpp  ex_service.cpp  ex_signal.cpp  ex_sqlite3.cpp  ex_udp_client.cpp  ex_udp_server.cpp  ex_wsclient.cpp  ex_wsserver.cpp  log.h  msg.h  udp_multicast_client.cpp  udp_multicast_server.cpp
examples/msg/: CMakeLists.txt  msg.h
include/cc/: asio.hpp  config.h.in  function.h  functor.h  json.h  lit.hpp  service.h  signal.h  singleton_provider.h  sqlite3.h  sqlite3pp.h  st.h  stopwatch.h  type_traits.h  util.h  value.h
include/cc/asio/: all.h  channel.h  condvar.h  core.h  helper.h  pool.h  semaphore.h
include/cc/http/: core.h  middleware.h  object.h  router.h  server.h
include/cc/lit/: client.h  core.h  middleware.h  mime_types.h  multipart_parser.h  object.h  router.h  server.h  util.h
include/cc/lit/middleware/: common.h  serve_static.h
scripts/: process_msg.awk
tests/: CMakeLists.txt  test_json.cpp  test_value.cpp
