macro(add_example TARGET)
  set(multiValueArgs SRCS DEPENDS)
  cmake_parse_arguments(EX "" "" "${multiValueArgs}" ${ARGN})
  list(LENGTH EX_SRCS SRCS_CNT)
  if(${SRCS_CNT})
    add_executable(${TARGET} ${EX_SRCS})
  else()
    add_executable(${TARGET} ${TARGET}.cpp)
  endif()
  target_link_libraries(${TARGET} PRIVATE cc ${EX_DEPENDS})
endmacro(add_example)

add_example(ex_asio_coro)
add_example(ex_asio_condvar)
add_example(ex_asio_semaphore)
add_example(ex_asio_channel)
add_example(ex_httpserver)
add_example(ex_httpclient)
add_example(ex_wsserver)
add_example(ex_sqlite3)
add_example(ex_signal)
add_example(ex_process)

add_example(ex_udp_client)
add_example(ex_udp_server)
